@@ -1,7 +1,7 @@
 /***************************************************************************************************
  *
- * Copyright (c) 2018 - 2022 Universitat Politecnica de Valencia - www.upv.es
- * Copyright (c) 2018 - 2022 Open Universiteit - www.ou.nl
+ * Copyright (c) 2018 - 2023 Universitat Politecnica de Valencia - www.upv.es
+ * Copyright (c) 2018 - 2023 Open Universiteit - www.ou.nl
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are met:
@@ -222,7 +222,7 @@ public class SutVisualization {
         for(Action a : actions){
             //a.get(Visualizer, Util.NullVisualizer).run(state, canvas, Pen.PEN_IGNORE);
             zindex = getTargetZindex(state,a);
-            zindexes.put(a, new Integer(zindex));
+            zindexes.put(a, Integer.valueOf(zindex));
             if (zindex < minz)
                 minz = zindex;
             if (zindex > maxz)
